--- a/project/src/main/resources/templates/notfound.html
+++ b/project/src/main/resources/templates/notfound.html
@@ -7,7 +7,7 @@
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0,
     maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover"
     />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="#" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" lang="zh-CN" content="" />
     <meta name="theme-color" content="#000000" />
